@@ -1,7 +1,6 @@
 Bug squashing:
-  * implement Cl.PrintHashtable() and Cl.PrintArrayList() methods, and use 
-    these instead of their ToString() methods in GetInternalInfo() and other 
-    trace prints 
+  * use Cl.ArrayListToString() and Cl.HashtableToString() instead of
+    their ToString() methods in GetInternalInfo() and other trace prints 
 
 Improvements:
   * make better use of C#/.NET's features, e.g.
